[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-python-scraping"
version = "2026.04.20"
description = "The Ultimate 50+ library manifest for Python web scraping and autonomous agents (Simulated April 2026 Sync)."
readme = "README.md"
authors = [{ name = "Python Scraping Community", email = "scraping-community@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "httpx==0.28.1",
    "beautifulsoup4==4.14.3",
    "lxml==5.4.0",
    "selectolax==0.4.7",
    "pydantic>=2.10",
    "python-dotenv",
]

[project.optional-dependencies]
agentic = [
    "multion==1.3.8",
    "skyvern==1.0.31",
    "stagehand==3.19.5",
    "browser-use==0.12.6",
    "browserbase==1.8.0",
]
ai = [
    "crawl4ai==0.8.6",
    "firecrawl-py==4.22.2",
    "scrapegraphai==1.76.0",
    "marker-pdf==1.10.2",
]
modern-core = [
    "httpx==0.28.1",
    "aiohttp==3.13.5",
    "playwright==1.58.0",
    "curl_cffi==0.15.0",
]
stealth = [
    "nodriver==0.48.1",
    "camoufox==0.4.11",
    "seleniumbase==4.48.2",
    "playwright-stealth==2.0.3",
]
specialized = [
    "yt-dlp==2026.3.17",
    "trafilatura==2.0.0",
    "newspaper4k==0.9.5",
]
cleaning = [
    "dateparser==1.4.0",
    "price-parser==0.5.1",
    "tenacity==9.1.4",
]

[project.urls]
Homepage = "https://github.com/user/awesome-python-scraping"
Issues = "https://github.com/user/awesome-python-scraping/issues"
