[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-web-scraping-libraries"
version = "2026.04.20"
description = "The Ultimate 50+ library manifest for Python web scraping and autonomous agents (Simulated April 2026 Sync)."
readme = "README.md"
authors = [{ name = "Jayesh Mepani", email = "jayeshmepani777@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "httpx==0.28.1",
    "beautifulsoup4==4.14.3",
    "lxml==6.1.0",
    "selectolax==0.4.7",
    "pydantic>=2.10",
    "python-dotenv",
]

[project.optional-dependencies]
agentic-multion = [
    "multion==1.3.8",
]
agentic-skyvern = [
    "skyvern==1.0.31",
]
agentic-browseruse = [
    "browser-use==0.12.6",
]
automation-pro = [
    "seleniumbase==4.48.2",
]
ai-pdf = [
    "marker-pdf==1.10.2",
]

# --- STABLE COMPATIBLE GROUPS ---
agentic-core = [
    "stagehand==3.19.5",
    "browserbase==1.8.0",
    "kadoa-sdk==0.18.5",
]
ai-core = [
    "crawl4ai==0.8.6",
    "firecrawl-py==4.22.2",
    "scrapegraphai==1.76.0",
    "goose3==3.1.21",
]
modern-core = [
    "httpx>=0.28.1",
    "aiohttp>=3.13.5,<4.0.0",
    "playwright==1.58.0",
    "curl_cffi==0.15.0",
]
stealth = [
    "nodriver==0.48.1",
    "camoufox==0.4.11",
    "playwright-stealth==2.0.3",
    "undetected-chromedriver==3.5.5",
    "DrissionPage==4.1.1.2",
]
specialized = [
    "yt-dlp==2026.3.17",
    "trafilatura==2.0.0",
    "newspaper4k==0.9.5",
    "pywebcopy==7.1",
]
cleaning = [
    "dateparser==1.4.0",
    "price-parser==0.5.1",
    "tenacity==9.1.4",
    "fake-useragent==2.2.0",
]

[project.urls]
Homepage = "https://jayeshmepani.site/"
Repository = "https://github.com/jayeshmepani/python-web-scraping-libraries"
Issues = "https://github.com/jayeshmepani/python-web-scraping-libraries/issues"
